sites/all/themes/bms/css/styles.css
/* ... */
.logged-in.page-join-our-team #content {
	padding: 0;
	background: none;
	box-shadow: none;
}

#page .links a, .add-project {
	width: 180px;
	background: #828282;
	color: #fff;
	font-size: 17px;
	line-height: 36px;
	font-weight: bold;
	text-align: center;
	text-shadow: 1px 0 1px rgba(0,0,0,0.15);
}

#page #content .links {
	margin-bottom: 20px;
}

#page #content .links a, .add-project {
	width: auto;
	padding: 0 10px;
	font-size: 14px;
	font-weight: normal;
}

.add-project {
	padding: 5px 10px;
}

#page .links .active {
	background: #fb942e;
}

#page .links li {
	float: left;
	margin-right: 2px;
	list-style: none;
	margin-left: 0;
}

#page #autocomplete li {
	list-style: none;
	margin-left: 0;
}

.view-filters {
	padding: 10px;
	background: #e9e9e9;
}

.view-filters select {
	width: 240px;
}

.flag-1 {
	margin: 0 auto;
	width: 20px;
	height: 27px;
	background: url(../images/icon_flag.png) no-repeat;
}

.flag-1.status-7 {
	width: 22px;
	height: 19px;
	background: url(../images/icon_green_check.png) no-repeat;
}

.view-empty {
	padding-top: 20px;
}

/** PROJECTS LANDING
================================================**/

.view-projects .view-filters label {
	font-size: 14px;
}

.view-projects .view-filters select {
	font-size: 12px;
	padding: 3px;
	width: 100px;
}


/** PHOTO APPROVAL
================================================**/

#bxdev-project-photo-approval-form {
	padding-top: 20px;
}

#bxdev-project-photo-approval-form .photo-wrap {
	width: 110px;
	border: solid #ccc 1px;
	padding: 20px;
	float:left;
	margin: 0 20px 20px 0;
	border-radius: 5px;
}

#bxdev-project-photo-approval-form .photo-wrap .form-item label.option {
	font-size: 16px;
}

#bxdev-project-photo-approval-form #edit-submit {
	display: block;
	clear: both;
}

.project-thumb-wrapper {
	margin-bottom: 20px;
	padding-bottom: 20px;
	border-bottom: 1px solid #b5b5b5;
	clear: left;
}

.project-thumb {
	float: left;
	width: 150px;
	margin: 0 7px 7px 7px;
}

.prod-details-wrap,
.prod-history-wrap {
	overflow: hidden;
}

.prod-details-wrap h2,
.prod-history-wrap h2 {
	font-size: 25px;
}

.trigger {
	float: left;
	padding-right: 65px;
	background: url(../images/sprite_global.png) no-repeat 260px -469px;
	cursor: pointer;
}

.trigger.active {
	background-position: 260px -511px;
}

.prod-details-wrap .trigger-list,
.prod-history-wrap .trigger-list {
	display: none;
	clear: left;
	margin-top: 40px;
}

.trigger-list .field,
.trigger-list .log-row {
	margin-bottom: 10px;
}

input[type="submit"].approve-btn, .approve-yes {
	display: block;
	width: 180px;
	height: 40px;
	background: #198300;
	color: #fff;
	line-height: 40px;
	text-align: center;
}

.approve-yes {
	margin-bottom: 10px; 
}

.approve-cancel {
	color: #f00;
}

.project-approved {
	background: green;
	color: #fff;
	font-size: 18px;
	padding: 20px;
	border-radius: 10px;
	text-align: center;
}


/** PROJECT PAGE
================================================**/

.page-sales-add-project #page {
	padding-top: 40px;
}

.node-type-project .left h1 {
	margin-bottom: 5px;
	line-height: 30px;
}

.node-type-project .left h2 {
	font-size: 15px;
}

.node-type-project .contact {
	margin-bottom: 30px;
}

.node-type-project .contact:last-child {
	margin-bottom: 0;
}


.node-type-project .contact h3 {
	margin-bottom: 5px;
	padding-bottom: 5px;
	border-bottom: 1px solid #b5b5b5;
}


.view-comments h2 {
	margin-bottom: 20px;
}

.view-comments .view-header a,
.download-doc a {
	float: right;
	padding: 0 5px;
	background: #4a4949;
	border-radius: 5px;
	color: #fff;
	font-weight: bold;
}

.download-doc a {
	margin-left: 10px;
}

.view-comments .view-header a {
	margin: 10px 10px 0 0;
}

.view-comments .views-row {
	margin-bottom: 20px;
	padding: 12px 20px;
	background: #efefef;
	border-radius: 10px;
	font-family: Georgia, serif;
}

.view-comments .views-field-field-name,
.view-comments .views-field-php {
	font-size: 20px;
	font-weight: bold;
}

.view-comments .views-field-created {
	font-size: 12px;
	font-style: italic;
}

#edit-field-comment .form-required {
	display: none;
}

.form-item-revision-list label {
	font-size: 14px;
}

#bxdev-project-videographer-documents-form #edit-signed-production-release-remove-button,
#bxdev-project-videographer-documents-form #edit-videographer-invoice-remove-button,
#bxdev-vid-w9-form #edit-w9-form-remove-button {
	font-size: 12px;
	height: 20px;
	line-height: 24px;
	background: transparent;
	color: #f00;
}

#bxdev-project-logo-upload-form input[value="Remove"],
#bxdev-project-logo-upload-form input[value="Upload"] {
	display: none;
}

#bxdev-project-logo-upload-form input[value="Add"] {
	font-size: 12px;
	padding: 5px 10px;
	height: auto;
	line-height: 14px;
	margin-right: 10px;
}

#bxdev-project-logo-upload-form #edit-business-logo-upload-button,
#bxdev-project-videographer-documents-form #edit-signed-production-release-upload-button,
#bxdev-project-videographer-documents-form #edit-videographer-invoice-upload-button {
	display: none;
}

#bxdev-project-logo-upload-form #edit-save,
#bxdev-project-videographer-documents-form #edit-save--2,
#bxdev-vid-w9-form #edit-submit {
	font-size: 12px;
	padding: 5px 10px;
	height: auto;
	line-height: 14px;
}

#edit-signed-production-release-ajax-wrapper {
	border-bottom: solid #ccc 1px;
	padding-bottom: 10px;
	margin-bottom: 10px;
}

#edit-field-shoot-date {
	display:none;
}

#edit-bxdev-shoot-date-fieldset .form-item {
	width: 300px;
	float: left;
}

#edit-bxdev-shoot-date-fieldset {
	width: 332px;
	margin-top: 20px;
	padding-top: 10px;
}

#edit-bxdev-shoot-date-fieldset .form-item input,
#edit-bxdev-shoot-date-fieldset .form-item select {
	width: 200px;
}

#media-browser-tabset .ui-tabs-nav {
	/*display: none;*/
}

.progress-disabled {
	float: none;
}

.ajax-progress {
	display: none;
}

.page-sales-add-cc .ajax-progress {
	display: block;
	color: #0A5C9B;
	font-size: 12px
}

.page-sales-add-cc .progress-disabled {
	float:left;	
	margin-right: 20px;
	-moz-transition: none;
  -webkit-transition: none;
}
/* ... */

